fixed layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -35,8 +35,9 @@
     padding-top: var(--top-bar-height);
 }
 
-.scroller {
+.ghost-scroller {
     overflow: auto;
+    flex-grow: 1;
 }
 
 .title {
